--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-    <title>Auto Parts</title>
+    <title>Juriel Portrait</title>
     <link rel="icon" href="tire.png" type="image/x-icon">
 </head>
 <style>
