--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	p{
 		font-size: 10px;
 		line-height: 8px;
+		text-align: justify;
 		background: url('juriel.jpg');
 		background-attachment: fixed;
 		background-repeat: no-repeat;
